--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
   margin-bottom: 25px;
   width: 100%;
 }
-}
 
 #whisperInput{
   width: min(800px, 90vw);
@@ -274,14 +273,11 @@
   background: #222;
 }
 #colorStatus{ font-size:13px; color:#9c9c9c; }
-  </style>
-<!-- ⬇️ ADD: Style for the new "Check Status" button -->
-<style>
   #checkStatusBtn {
     padding: 4px 8px; font-size: 13px; background: #222; border: 1px solid #333; color: #bbb; border-radius: 4px; font-family: 'VT323', monospace; cursor: pointer;
   }
   #checkStatusBtn:hover { background: #333; color: #fff; }
-</style>
+  </style>
 </head>
 <body>
   <div class="matrix-lines"></div>
@@ -378,6 +374,9 @@
 <!-- Solana web3 IIFE (nakon buffer-setup.js) -->
 <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.95.2/lib/index.iife.min.js" crossorigin="anonymous"></script>
  <script>
+// ✅ ADD: Lightweight profanity filter library
+const Filter=(function(){function e(e){this.list=e||[],this.placeHolder="*",this.regex=/@|\$|\\|\*/g,this.replaceRegex=/\w/g}return e.prototype.isProfane=function(e){for(var t=0;t<this.list.length;t++)if(new RegExp("\\b"+this.list[t].replace(/(\W)/g,"\\$1")+"\\b","gi").test(e))return!0;return!1},e.prototype.replaceWord=function(e){return e.replace(this.regex,"").replace(this.replaceRegex,this.placeHolder)},e.prototype.clean=function(e){return e.split(" ").map(function(e){return this.isProfane(e)?this.replaceWord(e):e}.bind(this)).join(" ")},e.prototype.addWords=function(){var e=Array.from(arguments);this.list=this.list.concat(e)},e.prototype.removeWords=function(){for(var e=Array.from(arguments),t=0;t<e.length;t++)for(var r=e[t],i=this.list.length-1;i>=0;i--)this.list[i]===r&&this.list.splice(i,1)},e})();
+
 (function(){
   console.log('[whispr] boot');
 
@@ -406,18 +405,19 @@
     const getPassStatus   = fns.httpsCallable('getPassStatus');
     const getBlockhash = fns.httpsCallable('getBlockhash');
     const confirmAndVerifyPayment = fns.httpsCallable('confirmAndVerifyPayment');
-    const sendWhisperFn = fns.httpsCallable('sendWhisper'); // ✅ ADD: New function for sending whispers
+    const sendWhisperFn = fns.httpsCallable('sendWhisper');
 
     // === UI elementi za colored pass (tvoj gumb i status) ===
     const colorBtn    = document.getElementById('colorWhisperBtn');
     const colorStatus = document.getElementById('colorStatus');
-    const checkStatusBtn = document.getElementById('checkStatusBtn'); // New button
+    const checkStatusBtn = document.getElementById('checkStatusBtn');
 
     // globalno stanje
-    let userPubkey = null;   // postavit će se kad spojiš Phantom
+    let userPubkey = null;
     let passActive = false;
     let passUntil  = 0;
-    const ownWhisperIds = new Set(); // ✅ ADD: A set to track our own whispers to prevent double-display.
+    const ownWhisperIds = new Set();
+    const profanityFilter = new Filter(); // ✅ ADD: Initialize profanity filter
 
     function renderColorStatus() {
       if (!colorStatus) return;
@@ -517,7 +517,7 @@
         if (passActive && passUntil > Date.now()) {
             colorStatus.textContent = '✅ color already active!';
             // Re-enable the button after a short delay
-            setTimeout(() => { colorBtn.disabled = false; }, 1500);
+            setTimeout(() => { colorBtn.disabled = false; renderColorStatus(); }, 1500);
             return;
         }
 
@@ -584,7 +584,7 @@
 
     // Uveži handler na gumb
     colorBtn?.addEventListener('click', onColorBtnClick);
-    checkStatusBtn?.addEventListener('click', onCheckStatusClick); // New event listener
+    checkStatusBtn?.addEventListener('click', onCheckStatusClick);
 
     // 3) DOM elementi
     const layer  = document.querySelector('.whispers');
@@ -621,6 +621,17 @@
     async function sendWhisper() {
       const text = (input.value || '').trim();
       if (!text) return;
+
+      // ✅ ADD: Client-side profanity check
+      if (profanityFilter.isProfane(text)) {
+          status.textContent = '❌ inappropriate language';
+          status.classList.add('show');
+          setTimeout(() => {
+              status.classList.remove('show');
+              status.textContent = '';
+          }, 2500);
+          return;
+      }
 
       // Disable UI to prevent spamming the send button
       input.disabled = true;
@@ -724,8 +735,9 @@
 })();
 </script>
 </body>
-
 </html>
+
+
 
 
 
